--- a/b.html
+++ b/b.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>대한민국 운동 소외계층인 여성들의 생애주기별 운동 정보를 공유하고 여성 종목 전문 지도자와 함께 다양한 서비스를 제공합니다.</h1>
-        <img src="2page.png">
+        <img src="2p.png">
 <ul>
   <li>20대 여성을 위한 운동적성 찾기<li>
   <li>30대 직장여성을 위한 생활 속 활력찾기<li>
